feat(api): update task API to support tag associations
- all updates now also trigger a websocket event, not just completion
  toggles
